<resources>
    <string name="app_name">HelloWorld</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_btn">Go to 1 fragment</string>
    <string name="second_btn">Go to 2 fragment</string>
    <string name="third_btn">Go to 3 fragment</string>
    <string name="title_first">Привет</string>
    <string name="title_second">МИР</string>

    <string name="btn_first_fragment">Кнопка номер раз</string>

    <string name="title_second_fragment">Кнопка плюс добавдляет новую кнопку в контейнер наверху</string>
    <string name="todo">TODO</string>
    <string name="enter_password">Enter password</string>
</resources>